# Deckhand

./: .codecannon.yaml  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  Makefile  README.md  ROADMAP.md  bindings.example.json  config.example.toml  pyproject.toml
.claude/: review-agent-prompt.md
.claude/commands/: deploy.md  qa.md  review.md  setup.md  start.md  status.md  submit-for-review.md
.cursor/rules/: deploy.mdc  qa.mdc  review.mdc  setup.mdc  start.mdc  status.mdc  submit-for-review.mdc
docs/: API.md  EVENTS.md  PLUGIN_GUIDE.md  STREAMDECK_CLIENT.md
examples/: README.md  example_plugin.py  streamdeck_bindings.json  streamdeck_client_template.py
opendeck-plugin/: README.md
opendeck-plugin/com.deckhand.plugin.sdPlugin/: audio.py  bridge.py  diagnostics.py  manifest.json  plugin.py  run.sh
opendeck-plugin/com.deckhand.plugin.sdPlugin/actions/: action_run.py  agent_dashboard.py  agent_status.py  signal_trigger.py  widget.py
opendeck-plugin/com.deckhand.plugin.sdPlugin/propertyInspector/: action_run.html  agent_dashboard.html  agent_status.html  sdpi.css  signal_trigger.html  widget.html
opendeck-plugin/tests/: test_plugin.py
src/deckhand/: __init__.py  logging_config.py  main.py  metrics.py  security.py
src/deckhand/agents/: __init__.py  base.py  mock.py
src/deckhand/clients/: __init__.py
src/deckhand/config/: bindings.py  loader.py  settings.py
tests/: __init__.py  conftest.py  test_actions.py  test_bridge.py  test_events.py  test_logging_config.py  test_plugin_capabilities.py  test_plugins.py  test_signals.py  test_state.py
(+17 files in other folders)
