[project]
name = "deckhand"
version = "0.1.1"
description = "Local-first orchestration service for Stream Deck via OpenDeck"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "websockets",
  "aiohttp",
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-asyncio",
  "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
